<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mountrack</string>
    <string name="action_settings">Settings</string>
    <string name="routelist_waiting_text">Loading routes&#8230;</string>
    <string name="title_activity_test">Test Activity</string>

    <!-- Main Activity -->
    <string name="main_start_walk_button_text">Start walking</string>
    <string name="main_my_routes_button_text">My routes</string>
    <string name="main_my_excursions_button_text">My excursions</string>

    <!-- Route selector -->
    <string name="page_by_name_title">By Name</string>
    <string name="page_by_name_description">Search by name</string>
    <string name="page_by_name_search_term_hint">Insert a route name</string>
    <string name="page_near_me_title">Near Me</string>
    <string name="page_near_me_description">Search routes near you</string>
    <string name="page_near_me_update_button">Update</string>
    <string name="page_saved_title">Saved</string>
    <string name="page_saved_description">Search saved route</string>

    <!-- Error messages -->
    <string name="no_result_message">No results found.</string>
    <string name="gps_disabled_message">Please turn on GPS and retry</string>
    <string name="network_unavailable_message">Please check your internet connection and retry</string>
    <string name="internal_error_message">An error occurred contacting the server.</string>
    <string name="general_error_message">An error occurred</string>

    <!-- Difficulty -->
    <string name="difficulty_tourist">Tourist</string>
    <string name="difficulty_excursionist">Excursionist</string>
    <string name="difficulty_advanced">Expert Excursionist</string>
    <string name="difficulty_equipped">Equipped</string>

    <!-- Route viewer -->
    <string name="title_activity_route_selector">Select route</string>
    <string name="title_activity_route_viewer">Route Viewer</string>
    <string name="difficulty_info">Difficulty</string>
    <string name="gap_info">Gap</string>
    <string name="estimated_time_info">Estimated time</string>
    <string name="length_info">Length</string>
    <string name="viewer_loading_message">Loading route&#8230;</string>
    <string name="route_viewer_start">Start walking</string>
    <string name="route_viewer_save">Save to device</string>
    <string name="route_viewer_delete">Delete</string>
    <string name="title_activity_saved_route_manager">Saved Routes</string>
    <string name="page_saved_search_term_hint">Insert a route name</string>
    <string name="error_deleting_route">Error deleting route</string>
    <string name="error_saving_route">Error saving route</string>
    <string name="route_saved">Route saved</string>
    <string name="route_deleted">Route deleted</string>
    <string name="msg_gps_disabled">Please turn GPS on</string>
    <string name="msg_far_from_route">Go closer to route</string>
    <string name="route_list_empty">No route saved</string>


    <!-- service test -->
    <string name="service_start">Start</string>
    <string name="service_stop">Stop</string>
    <string name="service_pause">Pause</string>
    <string name="service_resume">Resume</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>

    <!-- about -->
    <string name="action_about">About&#8230;</string>
    <string name="about_description">Developed with love\n by GUFO Labs\n2013</string>
    <string name="about_logo">Gufo Labs Logo</string>
    <string name="title_activity_waking">WakingActivity</string>

    <!-- walking -->
    <string name="walking_activity_time_to_arrive">Time to arrive</string>
    <string name="walking_activity_hiked_over_metres">Travelled metres</string>
    <string name="walking_activity_end_walk">End walk</string>
    <string name="walking_activity_pause">Pause</string>
    <string name="walking_activity_resume">Resume</string>
    <string name="walking_quit_notify">Are you sure you want to quit? You will lose your excursion progress.</string>

    <!-- Report viewer -->
    <string name="title_activity_report_viewer">View Excursion</string>
    <string name="title_activity_report_list">My Excursions</string>
    <string name="report_list_empty">No excursion available.\nGo outside and start walking!</string>
    <string name="spent_time_info">Spent time</string>
    <string name="traveled_meters_info">Traveled meters</string>
    <string name="date_info">Date</string>
    <string name="altitude_gap_info">Altitude Gap</string>
    <string name="walking_activity_altitude">Altitude</string>
    
    <string name="notifFarFromRouteTitle">Away from trail</string>
    <string name="notifGoingBackwardsTitle">Going backwards</string>
    <string name="notifMovingWhilePausedTitle">Tracking still paused</string>
    <string name="notifArrivedTitle">Trail finished</string>
    <string name="notifFarFromRouteDesc">You\'re moving away from trail!</string>
    <string name="notifGoingBackwardsDesc">You\'re going backwards! The trail continues on the other side.</string>
    <string name="notifMovingWhilePausedDesc">Have you may forgotten to set the restarting of the walk?</string>
    <string name="notifArrivedDesc">Congratulation! You\'ve just finished traveling the trail!</string>
    <string name="notifGpsDisabled">Gps is disabled</string>
    <string name="notifGpsDisabledDesc">Please turn on the GPS on your device.</string>
    <string name="notifForceQuit">Tracking terminated</string>
    <string name="notifForceQuitDesc">Tracking was terminated by the device.</string>
    
</resources>