<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:background="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/main_start_walk_button"
            style="@style/MainButtonStyle"
            android:text="@string/main_start_walk_button_text" />

        <Button
            android:id="@+id/main_my_routes_button"
            style="@style/MainButtonStyle"
            android:text="@string/main_my_routes_button_text" />

        <Button
            android:id="@+id/main_my_excursions_button"
            style="@style/MainButtonStyle"
            android:text="@string/main_my_excursions_button_text" />
    </LinearLayout>

</LinearLayout>