<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        style="@style/viewFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical"
        tools:context=".RouteViewer" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <fragment
                android:id="@+id/viewer_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="it.polimi.dima.dacc.mountainroutes.routeviewer.RouteViewerFragment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/messagebox_far_from_route"
                    style="@style/mapNotificationBar"
                    android:text="@string/msg_far_from_route"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/messagebox_gps_disabled"
                    style="@style/mapNotificationBar"
                    android:text="@string/msg_gps_disabled"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

            <RelativeLayout
                style="@style/walkingInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/walkingInfoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/difficulty_info" />

                <it.polimi.dima.dacc.mountainroutes.routeviewer.DifficultyView
                    android:id="@+id/difficulty_value"
                    style="@style/walkingInfoValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/walkingInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/walkingInfoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/length_info" />

                <TextView
                    android:id="@+id/lenght_value"
                    style="@style/walkingInfoValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/walkingInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/walkingInfoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/gap_info" />

                <TextView
                    android:id="@+id/gap_value"
                    style="@style/walkingInfoValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/walkingInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/walkingInfoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/estimated_time_info" />

                <TextView
                    android:id="@+id/estimated_time_value"
                    style="@style/walkingInfoValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >

            <Button
                android:id="@+id/route_viewer_start"
                style="@style/widget_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:enabled="false"
                android:text="@string/route_viewer_start" />

            <Button
                android:id="@+id/route_viewer_save"
                style="@style/widget_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/route_viewer_save"
                android:visibility="gone" />

            <Button
                android:id="@+id/route_viewer_delete"
                style="@style/widget_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/route_viewer_delete"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/overlay"
        style="@style/overlay_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1" >

        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp" />

        <TextView
            android:id="@+id/overlay_message"
            style="@style/overlay_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loading_spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/viewer_loading_message" />
    </RelativeLayout>

</RelativeLayout>