<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".WalkingActivity" >

    <it.polimi.dima.dacc.mountainroutes.walktracker.views.TimerView
        android:id="@+id/timer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:textSize="40sp" />

    <fragment
        android:id="@+id/walking_map"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        class="it.polimi.dima.dacc.mountainroutes.walktracker.views.RouteWalkFragment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/routeinfo_line"
        android:paddingBottom="2dp"
        android:paddingTop="8dp" >

        <TextView
            android:id="@+id/time_to_arrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/walking_activity_time_to_arrive"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time_to_arrive_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/walking_activity_time_to_arrive" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/routeinfo_line"
        android:paddingBottom="2dp" >

        <TextView
            android:id="@+id/hiked_over_metres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/walking_activity_hiked_over_metres" />

        <TextView
            android:id="@+id/hiked_over_metres_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/walking_activity_hiked_over_metres" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <it.polimi.dima.dacc.mountainroutes.walktracker.views.PauseResumeButton
            style="@style/widget_button"
            android:id="@+id/pause_resume_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/end_walk"
            style="@style/widget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/walking_activity_end_walk" />

    </RelativeLayout>

</LinearLayout>